test/should-fail/vsgc3106.f3
/**
 * VSGC-3106 - Sequence variable with public-init modifier can be updated 
 * outside of script file.
 *
 * @compilefirst vsgc3106Test.f3
 * @test/compile-error
 */

var obj = vsgc3106Test {
    seq : ["a","b"]
};

// compiler should issue an error for this
// because vsgc3106Test.seq is a "public-init"
// member of vsgc3106Test class.

obj.seq[0..1] = ["b", "c"]; 
